--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<header>
 			<h1 class="cvheading">Soorya George</h1>
 			<div>
-				<a href="cv.html">CV</a>
+				<a href="index.html">CV</a>
 				<a href="cover.html">Cover Letter</a>
 			</div>
 			<h3 class="cvheading">Email: sooryageorge07@gmail.com</h3>
